Troca paleta de cores do site para azul
Troca logo, botões e tudo que era vermelho para azul.

--- a/ibudget.css
+++ b/ibudget.css
@@ -140,7 +140,7 @@ table {
 }
 
 .container h2 {
-  color: #eb0000;
+  color: #063dbe;
   font-family: Inter;
   font-size: 32px;
   font-style: normal;
@@ -185,7 +185,7 @@ form input[type="password"] {
   display: block;
   margin: 0;
   border-radius: 5px;
-  border: 1px solid #eb0000;
+  border: 1px solid #063dbe;
   background: #d9d9d9;
   width: 100%;
   padding-left: 10px;
@@ -217,7 +217,7 @@ form label {
 
 form button {
     border-radius: 10px;
-    background: #EB0000;
+    background: #063dbe;
     width: 100%;
     line-height: 46px;
     border: 0;
